<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tickets"
        android:icon="@drawable/ic_tickets_menu_selector"
        android:title="@string/tickets_title_menu" />
    <item
        android:id="@+id/hotel"
        android:icon="@drawable/ic_hotel_menu_selector"
        android:title="@string/hotel_title_menu" />
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map_menu_selector"
        android:title="@string/map_title_menu" />

    <item
        android:id="@+id/subscribe"
        android:icon="@drawable/ic_subscribe_menu_selector"
        android:title="@string/subscribe_title_menu" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_menu_selector"
        android:title="@string/account_title_menu" />
</menu>